java/study-antlr/src/main/gen/com/heaven7/java/study/antlr/javaExpre/JavaExpreParser.java
// Generated from E:/study/github/research-institute/java/study-antlr/src/main/java/com/heaven7/java/study/antlr/javaExpre\JavaExpre.g4 by ANTLR 4.7
package com.heaven7.java.study.antlr.javaExpre;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class JavaExpreParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, ClassName=3, VarName=4, StringLiteral=5, IntNumber=6, 
		FloatNumber=7, NullLiteral=8, LPAREN=9, RPAREN=10, LBRACK=11, RBRACK=12, 
		COMMA=13, DOT=14, AND=15, OR=16, NOTEQUAL=17, EQUAL=18, QUESTION=19, COLON=20, 
		WS=21, COMMENT=22, LINE_COMMENT=23;
	public static final int
		RULE_surroundSimpleExpre = 0, RULE_simpleExpre = 1, RULE_surroundExpre = 2, 
		RULE_expre = 3, RULE_simpleExpreList = 4, RULE_arrayInvoke = 5, RULE_fieldInvoke = 6, 
		RULE_methodInvoke = 7, RULE_arrayExpre = 8, RULE_fieldExpre = 9, RULE_methodExpre = 10, 
		RULE_ternaryExpre = 11, RULE_surroundTernaryExpre = 12, RULE_doubleOrExpre = 13, 
		RULE_surroundDoubleOrExpre = 14, RULE_doubeAndExpre = 15, RULE_surroundDoubeAndExpre = 16, 
		RULE_equalExpre = 17, RULE_surroundEqualExpre = 18, RULE_notEqualExpre = 19, 
		RULE_surroundNotEqualExpre = 20, RULE_booleanConstantExpre = 21, RULE_classNameExpre = 22, 
		RULE_varNameExpre = 23;
	public static final String[] ruleNames = {
		"surroundSimpleExpre", "simpleExpre", "surroundExpre", "expre", "simpleExpreList", 
		"arrayInvoke", "fieldInvoke", "methodInvoke", "arrayExpre", "fieldExpre", 
		"methodExpre", "ternaryExpre", "surroundTernaryExpre", "doubleOrExpre", 
		"surroundDoubleOrExpre", "doubeAndExpre", "surroundDoubeAndExpre", "equalExpre", 
		"surroundEqualExpre", "notEqualExpre", "surroundNotEqualExpre", "booleanConstantExpre", 
		"classNameExpre", "varNameExpre"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'true'", "'false'", null, null, null, null, null, "'null'", "'('", 
		"')'", "'['", "']'", "','", "'.'", "'&&'", "'||'", "'!='", "'=='", "'?'", 
		"':'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, "ClassName", "VarName", "StringLiteral", "IntNumber", 
		"FloatNumber", "NullLiteral", "LPAREN", "RPAREN", "LBRACK", "RBRACK", 
		"COMMA", "DOT", "AND", "OR", "NOTEQUAL", "EQUAL", "QUESTION", "COLON", 
		"WS", "COMMENT", "LINE_COMMENT"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "JavaExpre.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public JavaExpreParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class SurroundSimpleExpreContext extends ParserRuleContext {
		public SimpleExpreContext simpleExpre() {
			return getRuleContext(SimpleExpreContext.class,0);
		}
		public SurroundSimpleExpreContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_surroundSimpleExpre; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JavaExpreListener ) ((JavaExpreListener)listener).enterSurroundSimpleExpre(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JavaExpreListener ) ((JavaExpreListener)listener).exitSurroundSimpleExpre(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JavaExpreVisitor ) return ((JavaExpreVisitor<? extends T>)visitor).visitSurroundSimpleExpre(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SurroundSimpleExpreContext surroundSimpleExpre() throws RecognitionException {
		SurroundSimpleExpreContext _localctx = new SurroundSimpleExpreContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_surroundSimpleExpre);
		try {
			setState(53);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(48);
				simpleExpre();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				{
				setState(49);
				match(LPAREN);
				setState(50);
				simpleExpre();
				setState(51);
				match(RPAREN);
				}
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SimpleExpreContext extends ParserRuleContext {
		public TernaryExpreContext ternaryExpre() {
			return getRuleContext(TernaryExpreContext.class,0);
		}
		public ExpreContext expre() {
			return getRuleContext(ExpreContext.class,0);
		}
		public DoubeAndExpreContext doubeAndExpre() {
			return getRuleContext(DoubeAndExpreContext.class,0);
		}
		public DoubleOrExpreContext doubleOrExpre() {
			return getRuleContext(DoubleOrExpreContext.class,0);
		}
		public EqualExpreContext equalExpre() {
			return getRuleContext(EqualExpreContext.class,0);
		}
		public NotEqualExpreContext notEqualExpre() {
			return getRuleContext(NotEqualExpreContext.class,0);
		}
		public SimpleExpreContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_simpleExpre; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JavaExpreListener ) ((JavaExpreListener)listener).enterSimpleExpre(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JavaExpreListener ) ((JavaExpreListener)listener).exitSimpleExpre(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JavaExpreVisitor ) return ((JavaExpreVisitor<? extends T>)visitor).visitSimpleExpre(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SimpleExpreContext simpleExpre() throws RecognitionException {
		SimpleExpreContext _localctx = new SimpleExpreContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_simpleExpre);
		try {
			setState(61);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(55);
				ternaryExpre();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(56);
				expre();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(57);
				doubeAndExpre();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(58);
				doubleOrExpre();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(59);
				equalExpre();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(60);
				notEqualExpre();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SurroundExpreContext extends ParserRuleContext {
		public ExpreContext expre() {
			return getRuleContext(ExpreContext.class,0);
		}
		public SurroundExpreContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_surroundExpre; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JavaExpreListener ) ((JavaExpreListener)listener).enterSurroundExpre(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JavaExpreListener ) ((JavaExpreListener)listener).exitSurroundExpre(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JavaExpreVisitor ) return ((JavaExpreVisitor<? extends T>)visitor).visitSurroundExpre(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SurroundExpreContext surroundExpre() throws RecognitionException {
		SurroundExpreContext _localctx = new SurroundExpreContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_surroundExpre);
		try {
			setState(68);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__0:
			case T__1:
			case ClassName:
			case VarName:
			case StringLiteral:
			case IntNumber:
			case FloatNumber:
				enterOuterAlt(_localctx, 1);
				{
				setState(63);
				expre();
				}
				break;
			case LPAREN:
				enterOuterAlt(_localctx, 2);
				{
				{
				setState(64);
				match(LPAREN);
				setState(65);
				expre();
				setState(66);
				match(RPAREN);
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpreContext extends ParserRuleContext {
		public VarNameExpreContext varNameExpre() {
			return getRuleContext(VarNameExpreContext.class,0);
		}
		public ArrayInvokeContext arrayInvoke() {
			return getRuleContext(ArrayInvokeContext.class,0);
		}
		public FieldInvokeContext fieldInvoke() {
			return getRuleContext(FieldInvokeContext.class,0);
		}
		public MethodInvokeContext methodInvoke() {
			return getRuleContext(MethodInvokeContext.class,0);
		}
		public TerminalNode StringLiteral() { return getToken(JavaExpreParser.StringLiteral, 0); }
		public TerminalNode IntNumber() { return getToken(JavaExpreParser.IntNumber, 0); }
		public TerminalNode FloatNumber() { return getToken(JavaExpreParser.FloatNumber, 0); }
		public BooleanConstantExpreContext booleanConstantExpre() {
			return getRuleContext(BooleanConstantExpreContext.class,0);
		}
		public ExpreContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expre; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JavaExpreListener ) ((JavaExpreListener)listener).enterExpre(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JavaExpreListener ) ((JavaExpreListener)listener).exitExpre(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JavaExpreVisitor ) return ((JavaExpreVisitor<? extends T>)visitor).visitExpre(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExpreContext expre() throws RecognitionException {
		ExpreContext _localctx = new ExpreContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_expre);
		try {
			setState(78);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(70);
				varNameExpre();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(71);
				arrayInvoke();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(72);
				fieldInvoke();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(73);
				methodInvoke();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(74);
				match(StringLiteral);
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(75);
				match(IntNumber);
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(76);
				match(FloatNumber);
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(77);
				booleanConstantExpre();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SimpleExpreListContext extends ParserRuleContext {
		public List<SurroundSimpleExpreContext> surroundSimpleExpre() {
			return getRuleContexts(SurroundSimpleExpreContext.class);
		}
		public SurroundSimpleExpreContext surroundSimpleExpre(int i) {
			return getRuleContext(SurroundSimpleExpreContext.class,i);
		}
		public SimpleExpreListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_simpleExpreList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JavaExpreListener ) ((JavaExpreListener)listener).enterSimpleExpreList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JavaExpreListener ) ((JavaExpreListener)listener).exitSimpleExpreList(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JavaExpreVisitor ) return ((JavaExpreVisitor<? extends T>)visitor).visitSimpleExpreList(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SimpleExpreListContext simpleExpreList() throws RecognitionException {
		SimpleExpreListContext _localctx = new SimpleExpreListContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_simpleExpreList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(80);
			surroundSimpleExpre();
			setState(85);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(81);
				match(COMMA);
				setState(82);
				surroundSimpleExpre();
				}
				}
				setState(87);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArrayInvokeContext extends ParserRuleContext {
		public VarNameExpreContext varNameExpre() {
			return getRuleContext(VarNameExpreContext.class,0);
		}
		public ArrayExpreContext arrayExpre() {
			return getRuleContext(ArrayExpreContext.class,0);
		}
		public ArrayInvokeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_arrayInvoke; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JavaExpreListener ) ((JavaExpreListener)listener).enterArrayInvoke(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JavaExpreListener ) ((JavaExpreListener)listener).exitArrayInvoke(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JavaExpreVisitor ) return ((JavaExpreVisitor<? extends T>)visitor).visitArrayInvoke(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ArrayInvokeContext arrayInvoke() throws RecognitionException {
		ArrayInvokeContext _localctx = new ArrayInvokeContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_arrayInvoke);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(88);
			varNameExpre();
			setState(89);
			arrayExpre();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FieldInvokeContext extends ParserRuleContext {
		public FieldExpreContext fieldExpre() {
			return getRuleContext(FieldExpreContext.class,0);
		}
		public ArrayExpreContext arrayExpre() {
			return getRuleContext(ArrayExpreContext.class,0);
		}
		public TerminalNode DOT() { return getToken(JavaExpreParser.DOT, 0); }
		public MethodExpreContext methodExpre() {
			return getRuleContext(MethodExpreContext.class,0);
		}
		public FieldInvokeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fieldInvoke; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JavaExpreListener ) ((JavaExpreListener)listener).enterFieldInvoke(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JavaExpreListener ) ((JavaExpreListener)listener).exitFieldInvoke(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JavaExpreVisitor ) return ((JavaExpreVisitor<? extends T>)visitor).visitFieldInvoke(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FieldInvokeContext fieldInvoke() throws RecognitionException {
		FieldInvokeContext _localctx = new FieldInvokeContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_fieldInvoke);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(91);
			fieldExpre();
			setState(95);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case DOT:
				{
				{
				setState(92);
				match(DOT);
				setState(93);
				methodExpre();
				}
				}
				break;
			case LBRACK:
				{
				setState(94);
				arrayExpre();
				}
				break;
			case RPAREN:
			case RBRACK:
			case COMMA:
			case AND:
			case OR:
			case NOTEQUAL:
			case EQUAL:
			case QUESTION:
			case COLON:
				break;
			default:
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MethodInvokeContext extends ParserRuleContext {
		public ClassNameExpreContext classNameExpre() {
			return getRuleContext(ClassNameExpreContext.class,0);
		}
		public VarNameExpreContext varNameExpre() {
			return getRuleContext(VarNameExpreContext.class,0);
		}
		public List<TerminalNode> DOT() { return getTokens(JavaExpreParser.DOT); }
		public TerminalNode DOT(int i) {
			return getToken(JavaExpreParser.DOT, i);
		}
		public List<MethodExpreContext> methodExpre() {
			return getRuleContexts(MethodExpreContext.class);
		}
		public MethodExpreContext methodExpre(int i) {
			return getRuleContext(MethodExpreContext.class,i);
		}
		public MethodInvokeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_methodInvoke; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JavaExpreListener ) ((JavaExpreListener)listener).enterMethodInvoke(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JavaExpreListener ) ((JavaExpreListener)listener).exitMethodInvoke(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JavaExpreVisitor ) return ((JavaExpreVisitor<? extends T>)visitor).visitMethodInvoke(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MethodInvokeContext methodInvoke() throws RecognitionException {
		MethodInvokeContext _localctx = new MethodInvokeContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_methodInvoke);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(99);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ClassName:
				{
				setState(97);
				classNameExpre();
				}
				break;
			case VarName:
				{
				setState(98);
				varNameExpre();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(103); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(101);
				match(DOT);
				setState(102);
				methodExpre();
				}
				}
				setState(105); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==DOT );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArrayExpreContext extends ParserRuleContext {
		public TerminalNode LBRACK() { return getToken(JavaExpreParser.LBRACK, 0); }
		public SurroundSimpleExpreContext surroundSimpleExpre() {
			return getRuleContext(SurroundSimpleExpreContext.class,0);
		}
		public TerminalNode RBRACK() { return getToken(JavaExpreParser.RBRACK, 0); }
		public ArrayExpreContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_arrayExpre; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JavaExpreListener ) ((JavaExpreListener)listener).enterArrayExpre(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JavaExpreListener ) ((JavaExpreListener)listener).exitArrayExpre(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JavaExpreVisitor ) return ((JavaExpreVisitor<? extends T>)visitor).visitArrayExpre(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ArrayExpreContext arrayExpre() throws RecognitionException {
		ArrayExpreContext _localctx = new ArrayExpreContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_arrayExpre);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(107);
			match(LBRACK);
			setState(108);
			surroundSimpleExpre();
			setState(109);
			match(RBRACK);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FieldExpreContext extends ParserRuleContext {
		public List<VarNameExpreContext> varNameExpre() {
			return getRuleContexts(VarNameExpreContext.class);
		}
		public VarNameExpreContext varNameExpre(int i) {
			return getRuleContext(VarNameExpreContext.class,i);
		}
		public ClassNameExpreContext classNameExpre() {
			return getRuleContext(ClassNameExpreContext.class,0);
		}
		public List<TerminalNode> DOT() { return getTokens(JavaExpreParser.DOT); }
		public TerminalNode DOT(int i) {
			return getToken(JavaExpreParser.DOT, i);
		}
		public FieldExpreContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fieldExpre; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JavaExpreListener ) ((JavaExpreListener)listener).enterFieldExpre(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JavaExpreListener ) ((JavaExpreListener)listener).exitFieldExpre(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JavaExpreVisitor ) return ((JavaExpreVisitor<? extends T>)visitor).visitFieldExpre(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FieldExpreContext fieldExpre() throws RecognitionException {
		FieldExpreContext _localctx = new FieldExpreContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_fieldExpre);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(114);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ClassName) {
				{
				setState(111);
				classNameExpre();
				setState(112);
				match(DOT);
				}
			}

			setState(116);
			varNameExpre();
			setState(121);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(117);
					match(DOT);
					setState(118);
					varNameExpre();
					}
					} 
				}
				setState(123);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MethodExpreContext extends ParserRuleContext {
		public VarNameExpreContext varNameExpre() {
			return getRuleContext(VarNameExpreContext.class,0);
		}
		public SimpleExpreListContext simpleExpreList() {
			return getRuleContext(SimpleExpreListContext.class,0);
		}
		public MethodExpreContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_methodExpre; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JavaExpreListener ) ((JavaExpreListener)listener).enterMethodExpre(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JavaExpreListener ) ((JavaExpreListener)listener).exitMethodExpre(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JavaExpreVisitor ) return ((JavaExpreVisitor<? extends T>)visitor).visitMethodExpre(this);
			else return visitor.visitChildren(this);
		}
	}
